2009-01-31  Carsten Dominik  <carsten.dominik@gmail.com>

	* org.el (org-enforce-todo-checkbox-dependencies): New option.
	(org-block-todo-from-checkboxes): New function.
	(org-todo): Make tripple prefix arg circumvent blocking.

2009-01-30  Glenn Morris  <rgm@gnu.org>

	* org-list.el (org-empty-line-terminates-plain-lists)
	(org-toggle-checkbox): Doc fixes.

	* org-table.el (org-table-clean-before-export): Fix declaration.

2009-01-30  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-timer.el (org-timer): Provide the timer feature.

	* org.el (org-require-autoloaded-modules): Add a few more files to
	the list of autoloaded modules.

	* org-agenda.el (org-agenda-todo): Pass ARG to `org-todo'.

	* org-exp.el (org-export-remove-or-extract-drawers): Only remove
	drawers that are unprotected.
	(org-export-html-format-image): Make sure inlined LaTeX fragment
	images remain inlined.

	* org.el (org-toggle-ordered-property): New function.
	(org-mode-map): Add a key for `org-toggle-ordered-property'.
	(org-org-menu): Add menu entries for TODO dependencies.

	* org.el (org-default-properties): Add ORDERED to the default
	properties, to get completion support for it.

	* org-list.el (org-update-checkbox-count): Update more than one cookie.

	* org.el (org-update-parent-todo-statistics): Update more than one
	cookie.

2009-01-28  Carsten Dominik  <carsten.dominik@gmail.com>

	* org-agenda.el (org-agenda-get-todos): Start search from correct
	position.

	* org.el (org-fast-todo-selection): Make sure TODO selection does
	not change buffer position.

	* org-list.el (org-toggle-checkbox): Implement adding or removing
	checkboxes from line or region when called with a prefix
	argument.

	* org-rmail.el (org-rmail-store-link): Protect the call to
	`rmail-narrow-to-non-pruned-header'.

	* org-clock.el (org-clock-special-range): Fix week display in
	clock tables.

	* org-exp.el (org-get-current-options): Fix bug when in indirect
	buffer.
